--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h1>Pohřební ústav Kostlivec</h1>
-        <p><i>Už se Vám z nich nebude chtít vstát</i></p>
+        <p>Z našich rakví se Vám už nebude chtít vstát</p>
     </div>
     <div class="container">
         <div class="card card-large">
